# PyCourse

./: .gitignore  AGENTS.md  CURRICULUM.md  README.md  package.json  pytest.ini
.cursor/: mcp.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_registration_coppa.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  health.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  tables.py
backend/app/repositories/: __init__.py  base.py  email_verification_repo.py  lesson_repo.py  progress_repo.py  session_repo.py  user_repo.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py
backend/app/services/email/: __init__.py  base.py  console.py  factory.py  smtp.py
backend/app/sync/: __init__.py  discovery.py  hashing.py  index_lessons.py
backend/tests/: conftest.py  test_coppa.py  test_registration.py  test_sessions.py
bot/: README.md
course-1-python-basics/: README.md  STUDENT-MAP.md  STUDENT-MAP.ru.md
course-2-web-apps/: README.md  STUDENT-MAP.md  STUDENT-MAP.ru.md
course-3-game-dev/: README.md
documents/: README.md  local-dev-and-mcp.md
frontend/: next.config.ts  package-lock.json  package.json
tmp/: 05-markdown-sync-job.plan.md  06-email-registration-flow.plan.md  07-signin-signout-sessions.plan.md  08-progress-sync-engine.plan.md  09-achievements-stars-system.plan.md  10-homework-checking-judge.plan.md  11-shared-api-contracts.plan.md  README.md  (+6 more)
(+362 files in other folders)
