[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycourse-backend"
version = "0.1.0"
description = "FastAPI shared backend for PyCourse platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "pydantic-settings>=2.4.0",
  "pydantic[email]>=2.8.0",
  "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
pycourse-index = "app.sync.index_lessons:main"

[tool.setuptools.packages.find]
include = ["app*"]
